syntax = "proto3";

package sole.api.v1.viper.cors;
import "google/protobuf/duration.proto";

option go_package = "github.com/searKing/sole/pkg/net/cors;cors";

message CORS {
  bool enable = 1;
  // returns Access-Control-Allow-Origin: * if false
  bool use_conditional = 2;

  // Conditional Cors bellow

  // allowed_origins is a list of origins a cross-domain request can be executed from.
  // If the special "*" value is present in the list, all origins will be allowed.
  // An origin may contain a wildcard (*) to replace 0 or more characters
  // (i.e.: http://*.domain.com). Usage of wildcards implies a small performance penalty.
  // Only one wildcard can be used per origin.
  // Default value is ["*"]
  // return Access-Control-Allow-Origin
  repeated string allowed_origins = 3;
  // allowed_methods is a list of methods the client is allowed to use with
  // cross-domain requests. Default value is simple methods (HEAD, GET and POST).
  repeated string allowed_methods = 4;
  // allowed_headers is list of non simple headers the client is allowed to use with
  // cross-domain requests.
  // If the special "*" value is present in the list, all headers will be allowed.
  // Default value is [] but "Origin" is always appended to the list.
  repeated string allowed_headers = 5;
  // exposed_headers indicates which headers are safe to expose to the API of a CORS
  // API specification
  // return Access-Control-Expose-Headers
  repeated string exposed_headers = 6;
  // allow_credentials indicates whether the request can include user credentials like
  // cookies, HTTP authentication or client side SSL certificates.
  // return Access-Control-Allow-Credentials
  bool allow_credentials = 7;
  // options_passthrough instructs preflight to let other potential next handlers to
  // process the OPTIONS method. Turn this on if your application handles OPTIONS.
  bool options_passthrough = 8;
  // max_age indicates how long the results of a preflight request
  // can be cached
  google.protobuf.Duration max_age = 9;
  // debug flag adds additional output to debug server side CORS issues
  bool debug = 10;
}